# csg-ijcai

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bdd.py  constraint.py  csg_worker.py  experiment_generator.py  graph_generator.py  mcnets.py  mcnets_mip_generator.py  mtzdd.py  mtzdd_mip_generator.py  parallel_solver.py  persistent_random.py  problem_generator.py
